2005-06-20 Hasso Tepper <hasso at quagga.net>

	* ospf_nsm.c: Make database exchange for NSSA database work. 

2005-06-13 Paul Jakma <paul.jakma@sun.com>

	* ospf_spf.c: Try get more information on a SEGV under 
	  ospf_spf_vertex_add_parent.
	  (ospf_vertex_free) NULL out the child and nexthop lists
	  (ospf_vertex_add_parent) nexthop and child can not be NULL
	  vertex_nexthop's parent->child list can not be NULL
	  (ospf_spf_next) w and cw are per-loop iteration variables, move
	  declarations into loop body.
	  
2005-06-07 Hasso Tepper <hasso at quagga.net>

	* ospf_apiserver.c: Fix obvious error in notifying clients about ISM
	  changes - oi->ifp->status doesn't give to us info about ISM,
	  oi->state does.

2005-06-01  Akihiro Mizutani  <mizutani@net-chef.net>

	* ospf_ism.c (ospf_elect_bdr/ospf_elect_dr): Fix DR election bug.

2005-05-26 Paul Jakma <paul.jakma@sun.com>

	* ospf_abr.c: (ospf_abr_update_aggregate) Fix comment, cost bug itself
	  had been fixed long ago by Sowmini.

2005-05-19 Paul Jakma <paul.jakma@sun.com>

	* ospf_interface.c: (ospf_if_table_lookup) Fix a serious bug
	  a less serious one. 
	  1: this function is supposed to lookup
	  entries in the oifs ospf_interface route_table and return either
	  an existing oi or NULL to indicate not found, its caller depends
	  on this, yet this function uses route_node_get which /always/
	  returns a route_node - one is created if none exists. Use
	  route_node_lookup instead. This should fix root cause of the
	  reports of the (ospf_add_to_if) assert being hit.
	  2: oi's are inserted into this table with prefixlength set to
	  /32 (indeed, it should be a hash table, not a route_table),
	  however prefixlength to lookup was not changed, if no valid entry
	  can be inserted other than /32, then nothng but /32 should be
	  looked up. This possibly only worked by fluke..
	  Fix confirmed by 2 reporters (one list, one IRC), definitely a